# oas-client-gen

./: .gitignore  CLAUDE.md  LICENSE  TODO.md  cabal.project  flake.nix  hie.yaml  oas-client-gen.cabal
.golden/Generator.FileSystem.Endpoint-generateEndpointDefinition-endpoint-with-path-params/: actual  golden
.golden/Generator.FileSystem.Endpoint-generateEndpointDefinition-endpoint-with-sum-type-response/: actual  golden
.golden/Generator.FileSystem.Endpoint-generateEndpointDefinition-post-endpoint-with-bodies/: golden
.golden/Generator.FileSystem.Endpoint-generateEndpointDefinition-simple-get-endpoint/: golden
.helix/: languages.toml
app/: Main.hs
example/: example.cabal
example/src/: Client.hs
example/src/Endpoints/: Balance.hs  Connections.hs  Customer_groups.hs  Customers.hs  Events.hs  Orders.hs  Payouts.hs  Products.hs  Store.hs  Subscriptions.hs  Transactions.hs
example/src/Endpoints/Accounting/: Accounts.hs  Balance_sheets.hs  Bank_deposits.hs  Bank_transfers.hs  Bill_credit_applications.hs  Bill_credit_memos.hs  Bill_payments.hs  Bills.hs  Cash_flow_statements.hs  Classes.hs  Company_info.hs  Currencies.hs  Customer_refunds.hs  Customers.hs  Departments.hs  Entitytype.hs  Expenses.hs  Income_statements.hs  Invoice_credit_applications.hs  Invoice_credit_memos.hs  Invoice_payments.hs  Invoices.hs  Items.hs  Journal_entries.hs  Locations.hs  Payment_methods.hs  Payment_terms.hs  Projects.hs  Purchase_orders.hs  Reports.hs  Sales_orders.hs  Subsidiaries.hs  Tasks.hs  Tax_agencies.hs  Tax_rates.hs  Vendors.hs
example/src/Endpoints/Accounting/Accounts/: Id.hs
example/src/Endpoints/Accounting/Bank_deposits/: Id.hs
example/src/Endpoints/Accounting/Bank_feeds/: Accounts.hs  Otp.hs  Transactions.hs
example/src/Endpoints/Accounting/Bank_transfers/: Id.hs
example/src/Endpoints/Accounting/Bill_credit_applications/: Unapply.hs
example/src/Endpoints/Accounting/Bill_credit_memos/: Id.hs
example/src/Endpoints/Accounting/Bill_payments/: Id.hs
example/src/Endpoints/Accounting/Bills/: Id.hs
example/src/Endpoints/Accounting/Classes/: Id.hs
example/src/Endpoints/Accounting/Currencies/: Id.hs
example/src/Endpoints/Accounting/Customer_refunds/: Id.hs
example/src/Endpoints/Accounting/Customers/: Id.hs
example/src/Endpoints/Accounting/Departments/: Id.hs
example/src/Endpoints/Accounting/Entitytype/: Custom_fields.hs
example/src/Endpoints/Accounting/Expenses/: Id.hs
example/src/Endpoints/Accounting/Invoice_credit_memos/: Id.hs
example/src/Endpoints/Accounting/Invoice_payments/: Id.hs
example/src/Endpoints/Accounting/Invoices/: Id.hs
example/src/Endpoints/Accounting/Items/: Id.hs
example/src/Endpoints/Accounting/Journal_entries/: Id.hs
example/src/Endpoints/Ads/: Accounts.hs  Campaigns.hs
example/src/Endpoints/Banking/: Bank_accounts.hs  Bank_transactions.hs
example/src/Endpoints/Connections/: Access_token.hs  Backfill.hs  Create.hs  Id.hs  Incremental_sync.hs  Status.hs
example/src/Endpoints/Customer_groups/: Id.hs
example/src/Endpoints/Customers/: Id.hs
example/src/Endpoints/Hris/: Departments.hs  Employees.hs  Organizations.hs
example/src/Endpoints/Jobs/: Id.hs
example/src/Endpoints/Orders/: Id.hs
example/src/Endpoints/Products/: Categories.hs  Id.hs
example/src/Types/: Account.hs  AccountResponseWithConnection.hs  AccountingCustomer.hs  AccountingCustomerRefund.hs  AccountingCustomerRefundResponseWithConnection.hs  AccountingCustomerResponseWithConnection.hs  AccountingItem.hs  AccountingItemResponseWithConnection.hs  Ach.hs  AdditionalFields.hs  AdditionalFields1.hs  AdditionalFields10.hs  AdditionalFields11.hs  AdditionalFields12.hs  AdditionalFields13.hs  AdditionalFields14.hs  AdditionalFields15.hs  AdditionalFields16.hs  AdditionalFields17.hs  AdditionalFields18.hs  AdditionalFields19.hs  AdditionalFields2.hs  AdditionalFields20.hs  AdditionalFields21.hs  AdditionalFields22.hs  AdditionalFields23.hs  AdditionalFields24.hs  AdditionalFields25.hs  AdditionalFields26.hs  AdditionalFields27.hs  AdditionalFields28.hs  AdditionalFields29.hs  AdditionalFields3.hs  AdditionalFields30.hs  AdditionalFields31.hs  AdditionalFields32.hs  AdditionalFields33.hs  AdditionalFields34.hs  AdditionalFields35.hs  AdditionalFields36.hs  (+900 more)
gen-samples/: Client.hs
gen-samples/Endpoints/: Health.hs  Predict.hs
gen-samples/Types/: GlResponse.hs  HttpValidationError.hs  InputData.hs  Location.hs  ValidationError.hs
oas-client-gen/: oas-client-gen.cabal
oas-client-gen/.golden/Generator.FileSystem.Endpoint-generateEndpointDefinition-endpoint-with-path-params/: golden
oas-client-gen/.golden/Generator.FileSystem.Endpoint-generateEndpointDefinition-endpoint-with-sum-type-response/: golden
oas-client-gen/.golden/Generator.FileSystem.Endpoint-generateEndpointDefinition-post-endpoint-with-bodies/: golden
oas-client-gen/.golden/Generator.FileSystem.Endpoint-generateEndpointDefinition-simple-get-endpoint/: golden
oas-client-gen/app/: Main.hs
oas-client-gen/base/OAS/Base/: Endpoint.hs
oas-client-gen/src/OAS/Aeson/: Modifiers.hs
oas-client-gen/src/OAS/Generator/: Endpoint.hs  Environment.hs  FileSystem.hs  Module.hs  OASType.hs
oas-client-gen/src/OAS/Generator/FileSystem/: Endpoint.hs  PrettyPrint.hs  Utils.hs
oas-client-gen/src/OAS/Schema/: Callback.hs  Component.hs  Example.hs  ExternalDocs.hs  Header.hs  Info.hs  OpenAPI.hs  Parameter.hs  Path.hs  Ref.hs  RequestBody.hs  Response.hs  RuntimeExpression.hs  SchemaObject.hs  SecurityScheme.hs  Server.hs  Tag.hs
oas-client-gen/test/: Main.hs
spec-samples/: autocat-openapi.json
src/OAS/Aeson/: Modifiers.hs
src/OAS/Generator/: Components.hs  Endpoint.hs  Endpoints.hs  Environment.hs  FileSystem.hs  Module.hs  OASType.hs
src/OAS/Generator/FileSystem/: Endpoint.hs  Utils.hs
src/OAS/Schema/: Component.hs  Example.hs  ExternalDocs.hs  Header.hs  Info.hs  Link.hs  OpenAPI.hs  Parameter.hs  Path.hs  Ref.hs  RequestBody.hs  Response.hs  RuntimeExpression.hs  SchemaObject.hs  SecurityScheme.hs  Server.hs  Tag.hs
test/: CoreSpec.hs
test/Generator/FileSystem/: EndpointSpec.hs
(+48 files in other folders)
