cabal-version: 3.4
name:          oas-client-gen
version:       0.0.0.0

-- synopsis:       $synopsis
-- description:    $description
-- category:       $category
-- homepage:       $gitrepo#readme
-- bug-reports:    $gitrepo/issues
-- maintainer:     $maintainer
build-type:    Simple

-- source-repository head
--   type: git
--   location: $gitrepo

common common-opts
  default-extensions:
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoFieldSelectors
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators

  build-depends:
    , aeson
    , base
    , bytestring
    , casing
    , containers
    , deriving-aeson
    , http-types
    , mtl
    , profunctors
    , scientific
    , text
    , unordered-containers

  -- Codecs
  default-language:   Haskell2010

library
  import:          common-opts

  -- cabal-fmt: expand src
  exposed-modules:
    OAS.Aeson.Modifiers
    OAS.Generator.Endpoint
    OAS.Generator.Module
    OAS.Generator.Environment
    OAS.Generator.OASType
    OAS.Schema.Callback
    OAS.Schema.Component
    OAS.Schema.Example
    OAS.Schema.ExternalDocs
    OAS.Schema.Header
    OAS.Schema.Info
    OAS.Schema.Link
    OAS.Schema.OpenAPI
    OAS.Schema.Parameter
    OAS.Schema.Path
    OAS.Schema.Ref
    OAS.Schema.RequestBody
    OAS.Schema.Response
    OAS.Schema.RuntimeExpression
    OAS.Schema.SchemaObject
    OAS.Schema.SecurityScheme
    OAS.Schema.Server
    OAS.Schema.Tag

  hs-source-dirs:  src

executable oas-client-gen
  import:         common-opts
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    , oas-client-gen
    , pretty-simple

test-suite oas-client-gen-tests
  import:         common-opts
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options:
    -Wall -threaded -rtsopts -with-rtsopts=-N -fdefer-typed-holes -O0

  main-is:        Main.hs

  -- cabal-fmt: expand test -Main
  other-modules:
    CoreSpec
    Spec

  build-depends:
    , hedgehog
    , hspec
    , hspec-core
    , hspec-discover
    , hspec-expectations
    , hspec-hedgehog
    , oas-client-gen
