cabal-version: 3.4
name:          oas-client-gen
version:       0.0.0.0

-- synopsis:       $synopsis
-- description:    $description
-- category:       $category
-- homepage:       $gitrepo#readme
-- bug-reports:    $gitrepo/issues
maintainer:    Jonathan Lorimer
build-type:    Simple

library
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    GADTs
    LambdaCase
    MultiWayIf
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards

  build-depends:
    , aeson
    , base
    , bytestring
    , casing
    , containers
    , deriving-aeson
    , directory
    , filepath
    , http-types
    , mtl
    , profunctors
    , scientific
    , text
    , unordered-containers

  -- Codecs
  default-language: GHC2021

  -- cabal-fmt: expand src
  exposed-modules:
    OAS.Aeson.Modifiers
    OAS.Generator.Endpoint
    OAS.Generator.Environment
    OAS.Generator.FileSystem
    OAS.Generator.FileSystem.Endpoint
    OAS.Generator.FileSystem.PrettyPrint
    OAS.Generator.FileSystem.Utils
    OAS.Generator.Module
    OAS.Generator.OASType
    OAS.Schema.Callback
    OAS.Schema.Component
    OAS.Schema.Example
    OAS.Schema.ExternalDocs
    OAS.Schema.Header
    OAS.Schema.Info
    OAS.Schema.Link
    OAS.Schema.OpenAPI
    OAS.Schema.Parameter
    OAS.Schema.Path
    OAS.Schema.Ref
    OAS.Schema.RequestBody
    OAS.Schema.Response
    OAS.Schema.RuntimeExpression
    OAS.Schema.SchemaObject
    OAS.Schema.SecurityScheme
    OAS.Schema.Server
    OAS.Schema.Tag

  hs-source-dirs:     src

library oas-client-base
  hs-source-dirs:   base
  default-language: GHC2021
  visibility: public

  -- cabal-fmt: expand base
  exposed-modules:  OAS.Base.Endpoint
  build-depends:
    , base
    , bytestring
    , http-types
    , profunctors
    , text

executable oas-client-gen
  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   GHC2021
  default-extensions:
    BlockArguments
    ImportQualifiedPost
    OverloadedRecordDot
    TypeApplications

  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , oas-client-gen
    , pretty-simple
    , text

test-suite oas-client-gen-tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  default-extensions:
    OverloadedStrings
  default-language:   GHC2021
  ghc-options:
    -Wall -threaded -rtsopts -with-rtsopts=-N -fdefer-typed-holes -O0

  main-is:        Main.hs

  -- cabal-fmt: expand test -Main
  other-modules:
    CoreSpec
    Generator.FileSystem.EndpointSpec
    Spec

  build-depends:
    , base
    , containers
    , text
    , http-types
    , hedgehog
    , hspec
    , hspec-core
    , hspec-discover
    , hspec-expectations
    , hspec-golden
    , hspec-hedgehog
    , oas-client-gen
